--- a/css/styles.css
+++ b/css/styles.css
@@ -119,4 +119,10 @@ main div h1 {
   animation: strip5 1.2s;
 }
 
+@media (max-width: 480px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
