--- a/css/styles.scss
+++ b/css/styles.scss
@@ -144,3 +144,9 @@ main {
     @include customMargin(8px 0px 5px 2px);
     animation: strip5 1.2s;
 }
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 1.5rem;
+    }
+}
