Added media query

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -146,7 +146,11 @@ main {
 }
 
 @media (max-width: 480px) {
-    h1 {
-        font-size: 1.5rem;
+    main {
+        div {
+            h1 {
+                font-size: 1.5rem;
+            }
+        }
     }
 }
