--- a/css/styles.scss
+++ b/css/styles.scss
@@ -144,3 +144,13 @@ main {
     @include customMargin(8px 0px 5px 2px);
     animation: strip5 1.2s;
 }
+
+@media (max-width: 480px) {
+    main {
+        div {
+            h1 {
+                font-size: 1.4rem;
+            }
+        }
+    }
+}
